# isoLASER

./: ._gqv.py  ._gqv_bam_utils.py  ._gqv_complex_indels_tool.py  ._gqv_dbg_utils.py  ._gqv_gff_utils.py  ._gqv_glm.py  ._gqv_isoform_linkage.py  ._gqv_software_management.py  ._gqv_utils_copy.py  ._gqv_vartool.py  ._isolaser_filter_and_annotate.py  ._nn_process_file.py  LICENSE  README.md  install.sh  sea  setup.cfg
src/isolaser/: ._gqv_bam_utils.py  annotate_reads.py  extract_exon_parts.py  ggsashimi.py  gqv_bam_utils.py  gqv_dbg_utils.py  gqv_gff_utils.py  gqv_glm.py  gqv_phaser.py  gqv_utils.py  isolaser.py  isolaser_joint.py  nigiri_parse_mi_file.py  split_bam_by_allele.py
src/isolaser.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/isolaser/glm/: GM12878_ONT_ROC.pickle  merged.GTEX.MERGED.ALLCHR.feature_matrix.tab.proc_1.csv.f1.glm.pickle  pacbio.filtered_hepg2.log.txt  smartseq2_gm12878_DS.txt  (+5 more)
test_pipeline/: README.md  config.yaml  isolaser_test.smk
test_pipeline/bam/: dlpfc_1.annotated.sorted.bam.bai  dlpfc_1.bam.bai  dlpfc_2.annotated.sorted.bam.bai  dlpfc_2.bam.bai  dlpfc_3.annotated.bam  dlpfc_3.annotated.sorted.bam  dlpfc_3.annotated.sorted.bam.bai  dlpfc_3.bam.bai
test_pipeline/data/: gencode.v37.annotation.gtf  hg38.dict  hg38.fa  hg38.fa.fai  hg38.fa.flat  hg38.fa.gdx  hg38.repeat_masker.table.tab  talon_observedOnly.chr21.sorted.gz.tbi  talon_observedOnly.sorted.fa
test_pipeline/nigiri/: dlpfc_2.cis_events.bed  dlpfc_2.cis_genes.tsv  dlpfc_3.cis_events.bed  dlpfc_3.cis_genes.tsv  dlpfc_3.gene_GET1.fofn
(+102 files in other folders)
