[metadata]
name = isolaser
version = 0.0.1
author = Giovanni Quinones Valdez
author_email = giovas@ucla.edu
description = Exonic Part centered allele-specific splicing analysis 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gxiaolab/isoLASER
project_urls =
    Bug Tracker = https://github.com/gxiaolab/isoLASER/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires = 
    multiprocess
    numpy
    scipy==1.10.1        
    pandas
    pysam
    pytabix
    pyfaidx
    biopython
    PyVCF
    HTSeq
    networkx
    scikit-learn



[options.package_data]
* = *.pickle 

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    isolaser = isolaser.isolaser:main
    isolaser_joint = isolaser.isolaser_joint:main
    isolaser_combine_vcf = isolaser.combine_vcf:main
    isolaser_filter = isolaser.isolaser_filter:main
    isolaser_convert_gtf_to_fasta = isolaser.convert_gff_to_fasta:main
    isolaser_extract_exon_parts = isolaser.extract_exon_parts:main
    isolaser_annotate  = isolaser.annotate_reads:main

    nigiri_parse = isolaser.nigiri_parse_mi_file:main
    nigiri_split = isolaser.split_bam_by_allele:main
    nigiri_plot  = isolaser.ggsashimi:main
